Aggiornamento lunatic nasty

--- a/Gerarchia/Gerarchia.html
+++ b/Gerarchia/Gerarchia.html
@@ -133,10 +133,10 @@
                 <a href="Personale/AEdoo/AEdoo.html"><img src="Skin/AEdoo.png" class="distintivo Vigile1"></a>
 
                 <div class="Ruolo posizione-assoluta ruolo-vigile2">Vigile del Fuoco</div>
-                <a href="Personale/_Nastyyy/_Nastyyy.html"><img src="Skin/_Nastyyy.png" class="distintivo Vigile2"></a>
+                <a href="Personale/Nastyyy/Nastyyy.html"><img src="Skin/Nastyyy.png" class="distintivo Vigile2"></a>
 
                 <div class="Ruolo posizione-assoluta ruolo-vigile3">Vigile del Fuoco</div>
-                <a href="Personale/_Lunvtic/_Lunvtic.html"><img src="Skin/_Lunvtic.png" class="distintivo Vigile3"></a>
+                <a href="Personale/Lunvtic/Lunvtic.html"><img src="Skin/Lunvtic.png" class="distintivo Vigile3"></a>
 
                 <div class="Ruolo posizione-assoluta ruolo-vigile4">Vigile del Fuoco</div>
                 <a href="Personale/Plazinho17/Plazinho17.html"><img src="Skin/Plazinho17.png" class="distintivo Vigile4"></a>
