--- a/Gerarchia/Personale/Nastyyy/Nastyyy.html
+++ b/Gerarchia/Personale/Nastyyy/Nastyyy.html
@@ -52,56 +52,28 @@
             <div class="contenitore-principale">
                 <div class="Personaggio">
                     <div class="Ruolo">Vigile del Fuoco</div> 
-                    <div class="nome">Luigi Martino</div>
+                    <div class="nome">_Nastyyy</div>
                     <div class="ruoliextra">
                         <div class="ruoloextra">Nucleo Speleo Alpino Fluviale</div>
                     </div>
                     <div class="Skin">
-                        <img src="../../Skin/_Lunvtic.png" alt="Skin del Giocatore" class="skin-png-display">
+                        <img src="../../Skin/Nastyyy.png" alt="Skin del Giocatore" class="skin-png-display">
                     </div>
                 </div>
 
                 <div class="Descrizione">
                     <p>
-                        Luigi Martino nasce a San Pietroburgo, in una famiglia umile legata da generazioni al lavoro artigianale. A causa delle difficoltà economiche e sociali in Russia, la famiglia è costretta a vendere la falegnameria e a trasferirsi a Pordenone, in Italia. <br><br>
+                        _Nastyyy nasce a Cambridge da due proprietari terrieri, persone legate alla loro terra e a una vita stabile e sedentaria. Cresce in un ambiente tradizionale, basato sul rispetto e sul senso del dovere. Fin da giovane, però, Mirko mostra un carattere diverso: curioso, avventuroso e con una forte voglia di viaggiare e conoscere il mondo.<br><br>
 
-                        Successivamente si trasferisce a NeoTecno dove frequenta l'istituto cittadino conseguendo il Diploma. Decide di intraprendere il percorso universitario laureandosi in Economia e in Lingue Straniere. Durante il percorso formativo ha svolto numerosi lavori nella città di NeoTecno, ma solo alcuni di questi l'hanno cambiato profondamente. Uno di questi è la Posta, dove raggiunge il ruolo di Supervisore IPN e dove conosce tantissime persone che diventeranno suoi amici stretti. Ha svolto anche una carriera politica, divenendo Congressuale e successivamente Segretario di Stato. <br><br>
+                        Arrivato a NeoTecno, viene accolto dalla chiesa locale, che lo aiuta ad ambientarsi e a trovare stabilità nella nuova città. In seguito intraprende un percorso lavorativo presso l’Istituto Giovanni Gentile, prima come bidello e poi come insegnante, scegliendo di lavorare a contatto con le persone.<br><br>
 
-                        Col tempo decide di realizzare uno dei suoi sogni più grandi: diventare Vigile del Fuoco, mestiere che svolge ancora oggi.
+                        La passione per i Vigili del Fuoco nasce da bambino, grazie alle storie raccontate dal nonno. Quella passione diventa realtà dopo il completamento dell’Accademia Madacaos di NeoTecno, dando inizio alla sua carriera come Vigile del Fuoco.
                     </p>
                 </div>
                         
                 <div class="Titoli-di-Studio">
 
-                    <div class="blocco-titoli" data-id="Lingue Straniere">
-                        <div class="titolo-header">
-                            <img src="../../Lauree/LibroFirmato.png" alt="Icona Titolo" class="titolo-icona">
-                            <span class="titolo-testo">Laurea in Lingue Straniere</span>
-                        </div>
-                        <div class="titolo-contenuto nascosto">
-                            <img src="Lauree/LingueStraniere.png" alt="Dettaglio Laurea in Lingue Straniere" class="contenuto-immagine">
-                        </div>
-                    </div>
 
-                    <div class="blocco-titoli" data-id="Economia">
-                        <div class="titolo-header">
-                            <img src="../../Lauree/LibroFirmato.png" alt="Icona Titolo" class="titolo-icona">
-                            <span class="titolo-testo">Laurea in Economia</span>
-                        </div>
-                        <div class="titolo-contenuto nascosto">
-                            <img src="Lauree/Economia.png" alt="Dettaglio Laurea in Economia" class="contenuto-immagine">
-                        </div>
-                    </div>
-
-                    <div class="blocco-titoli" data-id="diploma">
-                        <div class="titolo-header">
-                            <img src="../../Lauree/LibroFirmato.png" alt="Icona Titolo" class="titolo-icona">
-                            <span class="titolo-testo">Diploma</span>
-                        </div>
-                        <div class="titolo-contenuto nascosto">
-                            <img src="Lauree/Diploma.png" alt="Dettaglio Diploma" class="contenuto-immagine">
-                        </div>
-                    </div>
                 </div>
 
             </div>
