--- a/Gerarchia/Personale/Noahqx_/Noahqx_.html
+++ b/Gerarchia/Personale/Noahqx_/Noahqx_.html
@@ -76,7 +76,7 @@
                     <div class="blocco-titoli" data-id="Difesa">
                         <div class="titolo-header">
                             <img src="../../Lauree/LibroFirmato.png" alt="Icona Titolo" class="titolo-icona">
-                            <span class="titolo-testo">Laurea in Scienze della Difesa e Sicurezza</span>
+                            <span class="titolo-testo">Laurea in Scienze della Difesa</span>
                         </div>
                         <div class="titolo-contenuto nascosto">
                             <img src="Lauree/Difesa.png" alt="Dettaglio Laurea in Scienze della Difesa e Sicurezza" class="contenuto-immagine">
