aggiornamento titoli di studio

--- a/Gerarchia/Personale/AEdoo/AEdoo.html
+++ b/Gerarchia/Personale/AEdoo/AEdoo.html
@@ -74,7 +74,7 @@
                             <span class="titolo-testo">Diploma</span>
                         </div>
                         <div class="titolo-contenuto nascosto">
-                            <img src="Lauree/Diploma.png" alt="Dettaglio Diploma" class="contenuto-immagine">
+                            <img src="../../Lauree/Diploma/AEdoo.png" alt="Dettaglio Diploma" class="contenuto-immagine">
                         </div>
                     </div>
                 </div>
