--- a/Gerarchia/Personale/Baroloh_/Baroloh_.html
+++ b/Gerarchia/Personale/Baroloh_/Baroloh_.html
@@ -79,7 +79,7 @@
                             <span class="titolo-testo">Diploma</span>
                         </div>
                         <div class="titolo-contenuto nascosto">
-                            <img src="Lauree/Diploma.png" alt="Dettaglio Diploma" class="contenuto-immagine">
+                            <img src="../../Lauree/Diploma/Baroloh_.png" alt="Dettaglio Diploma" class="contenuto-immagine">
                         </div>
                     </div>
                 </div>
