--- a/Gerarchia/Personale/Jibay_1/Jibay_1.html
+++ b/Gerarchia/Personale/Jibay_1/Jibay_1.html
@@ -58,7 +58,7 @@
                         <div class="ruoloextra">Gestione Rapporti</div>
                     </div>
                     <div class="Skin">
-                        <img src="../../Skin/Jibay_1.png" alt="Skin del Giocatore" class="skin-png-display">
+                        <img src="../../Lauree/Diploma/Jibay_1.png" alt="Skin del Giocatore" class="skin-png-display">
                     </div>
                 </div>
 
