--- a/Gerarchia/Personale/Koyukii_/Koyukii_.html
+++ b/Gerarchia/Personale/Koyukii_/Koyukii_.html
@@ -81,7 +81,7 @@
                             <span class="titolo-testo">Laurea in Giurisprudenza</span>
                         </div>
                         <div class="titolo-contenuto nascosto">
-                            <img src="Lauree/Giurisprudenza.png" alt="Dettaglio Laurea in Giurisprudenza" class="contenuto-immagine">
+                            <img src="../../Lauree/Giurisprudenza/Koyukii_.png" alt="Dettaglio Laurea in Giurisprudenza" class="contenuto-immagine">
                         </div>
                     </div>
 
@@ -91,7 +91,7 @@
                             <span class="titolo-testo">Laurea in Informatica</span>
                         </div>
                         <div class="titolo-contenuto nascosto">
-                            <img src="Lauree/Informatica.png" alt="Dettaglio Laurea in Informatica" class="contenuto-immagine">
+                            <img src="../../Lauree/Informatica/Koyukii_.png" alt="Dettaglio Laurea in Informatica" class="contenuto-immagine">
                         </div>
                     </div>
 
@@ -101,7 +101,7 @@
                             <span class="titolo-testo">Diploma</span>
                         </div>
                         <div class="titolo-contenuto nascosto">
-                            <img src="Lauree/Diploma.png" alt="Dettaglio Diploma" class="contenuto-immagine">
+                            <img src="../../Lauree/Diploma/Koyukii_.png" alt="Dettaglio Diploma" class="contenuto-immagine">
                         </div>
                     </div>
                 </div>
