--- a/Gerarchia/Personale/Lunvtic/Lunvtic.html
+++ b/Gerarchia/Personale/Lunvtic/Lunvtic.html
@@ -79,7 +79,7 @@
                             <span class="titolo-testo">Laurea in Lingue Straniere</span>
                         </div>
                         <div class="titolo-contenuto nascosto">
-                            <img src="Lauree/LingueStraniere.png" alt="Dettaglio Laurea in Lingue Straniere" class="contenuto-immagine">
+                            <img src="../../Lauree/LingueStraniere/Lunvtic.png" alt="Dettaglio Laurea in Lingue Straniere" class="contenuto-immagine">
                         </div>
                     </div>
 
@@ -89,7 +89,7 @@
                             <span class="titolo-testo">Laurea in Economia</span>
                         </div>
                         <div class="titolo-contenuto nascosto">
-                            <img src="Lauree/Economia.png" alt="Dettaglio Laurea in Economia" class="contenuto-immagine">
+                            <img src="../../Lauree/Economia/Lunvtic.png" alt="Dettaglio Laurea in Economia" class="contenuto-immagine">
                         </div>
                     </div>
 
@@ -99,7 +99,7 @@
                             <span class="titolo-testo">Diploma</span>
                         </div>
                         <div class="titolo-contenuto nascosto">
-                            <img src="Lauree/Diploma.png" alt="Dettaglio Diploma" class="contenuto-immagine">
+                            <img src="../../Lauree/Diploma/Lunvtic.png" alt="Dettaglio Diploma" class="contenuto-immagine">
                         </div>
                     </div>
                 </div>
