--- a/Gerarchia/Personale/yFedee_/yFedee_.html
+++ b/Gerarchia/Personale/yFedee_/yFedee_.html
@@ -86,7 +86,7 @@
                         </div>
                         
                         <div class="titolo-contenuto nascosto">
-                            <img src="Lauree/Informatica.png" alt="Dettaglio Informatica" class="contenuto-immagine">
+                            <img src="../../Lauree/Informatica/yFedee_.png" alt="Dettaglio Informatica" class="contenuto-immagine">
                         </div>
                     </div>
                     
@@ -96,7 +96,7 @@
                             <span class="titolo-testo">Diploma</span>
                         </div>
                         <div class="titolo-contenuto nascosto">
-                            <img src="Lauree/Diploma.png" alt="Dettaglio Diploma" class="contenuto-immagine">
+                            <img src="../../Lauree/Diploma/yFedee_.png" alt="Dettaglio Diploma" class="contenuto-immagine">
                         </div>
                     </div>
                 </div>
