--- a/Gerarchia/Personale/GetGabrii/GetGabrii.html
+++ b/Gerarchia/Personale/GetGabrii/GetGabrii.html
@@ -76,7 +76,7 @@
                             <span class="titolo-testo">Diploma</span>
                         </div>
                         <div class="titolo-contenuto nascosto">
-                            <img src="Lauree/Diploma.png" alt="Dettaglio Diploma" class="contenuto-immagine">
+                            <img src="../../Lauree/Diploma/GetGabrii.png" alt="Dettaglio Diploma" class="contenuto-immagine">
                         </div>
                     </div>
                 </div>
