--- a/Gerarchia/Personale/Noahqx_/Noahqx_.html
+++ b/Gerarchia/Personale/Noahqx_/Noahqx_.html
@@ -79,7 +79,7 @@
                             <span class="titolo-testo">Laurea in Scienze della Difesa</span>
                         </div>
                         <div class="titolo-contenuto nascosto">
-                            <img src="Lauree/Difesa.png" alt="Dettaglio Laurea in Scienze della Difesa e Sicurezza" class="contenuto-immagine">
+                            <img src="../../Lauree/Difesa/Noahqx_.png" alt="Dettaglio Laurea in Scienze della Difesa e Sicurezza" class="contenuto-immagine">
                         </div>
                     </div>
 
@@ -89,7 +89,7 @@
                             <span class="titolo-testo">Diploma</span>
                         </div>
                         <div class="titolo-contenuto nascosto">
-                            <img src="Lauree/Diploma.png" alt="Dettaglio Diploma" class="contenuto-immagine">
+                            <img src="../../Lauree/Diploma/Noahqx_.png" alt="Dettaglio Diploma" class="contenuto-immagine">
                         </div>
                     </div>
                 </div>
