--- a/Gerarchia/Personale/ToxicAnthony_/ToxicAnthony_.html
+++ b/Gerarchia/Personale/ToxicAnthony_/ToxicAnthony_.html
@@ -108,7 +108,7 @@
                         </div>
                         
                         <div class="titolo-contenuto nascosto">
-                            <img src="Lauree/Difesa.png" alt="Dettaglio Scienze della Difesa e Sicurezza" class="contenuto-immagine">
+                            <img src="../../Lauree/Difesa/ToxicAnthony_.png" alt="Dettaglio Scienze della Difesa e Sicurezza" class="contenuto-immagine">
                         </div>
                     </div>
                     
@@ -118,7 +118,7 @@
                             <span class="titolo-testo">Diploma</span>
                         </div>
                         <div class="titolo-contenuto nascosto">
-                            <img src="Lauree/Diploma.png" alt="Dettaglio Diploma" class="contenuto-immagine">
+                            <img src="../../Lauree/Diploma/ToxicAnthony_.png" alt="Dettaglio Diploma" class="contenuto-immagine">
                         </div>
                     </div>
                 </div>
