--- a/Gerarchia/Personale/giorgiq_/giorgiq_.html
+++ b/Gerarchia/Personale/giorgiq_/giorgiq_.html
@@ -75,7 +75,7 @@
                             <span class="titolo-testo">Diploma</span>
                         </div>
                         <div class="titolo-contenuto nascosto">
-                            <img src="Lauree/Diploma.png" alt="Dettaglio Diploma" class="contenuto-immagine">
+                            <img src="../../Lauree/Diploma/giorgiq_.png" alt="Dettaglio Diploma" class="contenuto-immagine">
                         </div>
                     </div>
                 </div>
