--- a/Gerarchia/Personale/yStee_/yStee_.html
+++ b/Gerarchia/Personale/yStee_/yStee_.html
@@ -79,7 +79,7 @@
                             <span class="titolo-testo">Laurea in Informatica</span>
                         </div>
                         <div class="titolo-contenuto nascosto">
-                            <img src="Lauree/Informatica.png" alt="Dettaglio Laurea in Informatica" class="contenuto-immagine">
+                            <img src="../../Lauree/Informatica/yStee_.png" alt="Dettaglio Laurea in Informatica" class="contenuto-immagine">
                         </div>
                     </div>
 
@@ -89,7 +89,7 @@
                             <span class="titolo-testo">Laurea in Economia</span>
                         </div>
                         <div class="titolo-contenuto nascosto">
-                            <img src="Lauree/Economia.png" alt="Dettaglio Laurea in Economia" class="contenuto-immagine">
+                            <img src="../../Lauree/Economia/yStee_.png" alt="Dettaglio Laurea in Economia" class="contenuto-immagine">
                         </div>
                     </div>
 
@@ -99,7 +99,7 @@
                             <span class="titolo-testo">Diploma</span>
                         </div>
                         <div class="titolo-contenuto nascosto">
-                            <img src="Lauree/Diploma.png" alt="Dettaglio Diploma" class="contenuto-immagine">
+                            <img src="../../Lauree/Diploma/yStee_.png" alt="Dettaglio Diploma" class="contenuto-immagine">
                         </div>
                     </div>
                 </div>
