cambio css onorificenze

--- a/Riconoscimenti/Riconoscimenti.html
+++ b/Riconoscimenti/Riconoscimenti.html
@@ -4,7 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
         <title>Vigili del Fuoco di Neotecno » Sito Ufficiale</title>
         <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
-        <link rel="stylesheet" href="Riconoscimenti.css"> 
+        <link rel="stylesheet" href="../Riconoscimenti/Riconoscimenti.css"> 
         <link rel="stylesheet" href="../CSS/globale.css"> 
         <link rel="icon" type="image/png" href="../Logo/favicon.ico"> 
         <meta property="og:type" content="website">
