--- a/Gerarchia/Gerarchia.html
+++ b/Gerarchia/Gerarchia.html
@@ -5,7 +5,7 @@
         <title>Vigili del Fuoco di Neotecno » Sito Ufficiale</title>
         <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
         <link rel="stylesheet" href="../CSS/globale.css"> 
-        <link rel="stylesheet" href="Gerarchia.css"> 
+        <link rel="stylesheet" href="../CSS/Gerarchia.css"> 
         <link rel="icon" type="image/png" href="../Logo/favicon.ico"> 
         <meta property="og:type" content="website">
     </head>
