--- a/Gerarchia/Personale/yAcee_/yAcee_.html
+++ b/Gerarchia/Personale/yAcee_/yAcee_.html
@@ -4,6 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
         <title>Vigili del Fuoco di Neotecno » Sito Ufficiale</title>
         <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Orbitron:wght@400;900&display=swap" rel="stylesheet">
          <link rel="stylesheet" href="../../../CSS/operatori.css">
         <link rel="stylesheet" href="../../../CSS/globale.css"> 
         <link rel="icon" type="image/png" href="../../../Logo/favicon.ico"> 
