aggiunta img aziende e cambio tabella

--- a/Resoconto/Aziende/BottegaAlfieri.html
+++ b/Resoconto/Aziende/BottegaAlfieri.html
@@ -11,24 +11,16 @@
         <meta property="og:type" content="website">
     </head>
     <style>
-        #resoconto-abitazioni.theme-light .content,
-        #resoconto-abitazioni.theme-christmas .content {
+        #resoconto.theme-light .content,
+        #resoconto.theme-christmas .content {
         background-image: url('../../Immagini/Sfondi/BottegaAlfieriLight.png');
-        background-position: top center; 
-        background-size: cover; 
-        background-attachment: scroll;
-        background-repeat: no-repeat;
         }
 
-        #resoconto-abitazioni.theme-dark .content {
+        #resoconto.theme-dark .content {
         background-image: url('../../Immagini/Sfondi/BottegaAlfieriDark.png');
-        background-position: top center; 
-        background-size: cover; 
-        background-attachment: scroll;
-        background-repeat: no-repeat;
         }
     </style>
-        <body id="resoconto-abitazioni">
+        <body id="resoconto">
             <div id="transition-layer">
                 <div class="loader">
                     <span></span>
@@ -97,11 +89,11 @@
                             <td class="data-value"></td>
                             <td class="data-value"></td>
                             <td class="data-value"></td>
-                            <td class="data-value">x</td>
-                            <td class="data-value">x</td>
-                            <td class="data-value">x</td>
-                            <td class="data-value">x</td>
-                            <td class="data-value">x</td>
+                            <td class="data-value">4</td>
+                            <td class="data-value">15</td>
+                            <td class="data-value">7</td>
+                            <td class="data-value">10</td>
+                            <td class="data-value">11</td>
                             <td class="data-value"></td>
                         </tr>
                     </tbody>
