--- a/Resoconto/Aziende/Fattoria.html
+++ b/Resoconto/Aziende/Fattoria.html
@@ -1,23 +1,23 @@
-﻿<html lang="it">
+<html lang="it">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
         <title>Vigili del Fuoco di Neotecno » Sito Ufficiale</title>
         <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Orbitron:wght@400;900&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="../../CSS/Aziende.css">
         <link rel="stylesheet" href="../../CSS/globale.css"> 
+        <link rel="stylesheet" href="../../CSS/Aziende.css">
         <link rel="icon" type="image/png" href="../../Logo/favicon.ico"> 
         <meta property="og:type" content="website">
     </head>
     <style>
         #resoconto.theme-light .content,
         #resoconto.theme-christmas .content {
-        background-image: url('../../Immagini/Sfondi/IkeaLight.png');
+        background-image: url('../../Immagini/Sfondi/FattoriaLight.png');
         }
 
         #resoconto.theme-dark .content {
-        background-image: url('../../Immagini/Sfondi/IkeaDark.png');
+        background-image: url('../../Immagini/Sfondi/FattoriaDark.png');
         }
     </style>
         <body id="resoconto">
@@ -61,7 +61,7 @@
 
             <div class="content"> 
                 <div class="header-titoli">
-                    <div class="azienda">IKEA</div>
+                    <div class="azienda">Fattoria</div>
                     <div class="incendio">Resoconto Annuale</div>
                 </div>
                 <table class="monthly-report-table">
@@ -89,11 +89,11 @@
                             <td class="data-value"></td>
                             <td class="data-value"></td>
                             <td class="data-value"></td>
-                            <td class="data-value">x</td>
-                            <td class="data-value">x</td>
-                            <td class="data-value">x</td>
-                            <td class="data-value">x</td>
-                            <td class="data-value">x</td>
+                            <td class="data-value"></td>
+                            <td class="data-value"></td>
+                            <td class="data-value"></td>
+                            <td class="data-value"></td>
+                            <td class="data-value"></td>
                             <td class="data-value"></td>
                         </tr>
                     </tbody>
