--- a/Resoconto/Aziende/Tastyburger.html
+++ b/Resoconto/Aziende/Tastyburger.html
@@ -11,24 +11,16 @@
         <meta property="og:type" content="website">
     </head>
     <style>
-        #resoconto-abitazioni.theme-light .content,
-        #resoconto-abitazioni.theme-christmas .content {
+        #resoconto.theme-light .content,
+        #resoconto.theme-christmas .content {
         background-image: url('../../Immagini/Sfondi/TastyburgerLight.png');
-        background-position: top center; 
-        background-size: cover; 
-        background-attachment: scroll;
-        background-repeat: no-repeat;
         }
 
-        #resoconto-abitazioni.theme-dark .content {
+        #resoconto.theme-dark .content {
         background-image: url('../../Immagini/Sfondi/TastyburgerDark.png');
-        background-position: top center; 
-        background-size: cover; 
-        background-attachment: scroll;
-        background-repeat: no-repeat;
         }
     </style>
-        <body id="resoconto-abitazioni">
+        <body id="resoconto">
             <div id="transition-layer">
                 <div class="loader">
                     <span></span>
