--- a/Resoconto/Aziende/CaritasChiesa.html
+++ b/Resoconto/Aziende/CaritasChiesa.html
@@ -89,11 +89,11 @@
                             <td class="data-value"></td>
                             <td class="data-value"></td>
                             <td class="data-value"></td>
-                            <td class="data-value">9</td>
-                            <td class="data-value">4</td>
-                            <td class="data-value">7</td>
-                            <td class="data-value">5</td>
-                            <td class="data-value">6</td>
+                            <td class="data-value"></td>
+                            <td class="data-value"></td>
+                            <td class="data-value"></td>
+                            <td class="data-value"></td>
+                            <td class="data-value"></td>
                             <td class="data-value"></td>
                         </tr>
                     </tbody>
@@ -121,5 +121,6 @@
             <script src="../../Script/Temi.js"></script> 
             <script src="../../Script/Neve.js"></script> 
             <script src="../../Script/CambiaPage.js"></script>
+            <script src="../../Script/SommaIncendi.js"></script>
         </body>
 </html>
