--- a/Resoconto/Aziende/Fattoria.html
+++ b/Resoconto/Aziende/Fattoria.html
@@ -121,5 +121,6 @@
             <script src="../../Script/Temi.js"></script> 
             <script src="../../Script/Neve.js"></script> 
             <script src="../../Script/CambiaPage.js"></script>
+            <script src="../../Script/SommaIncendi.js"></script>
         </body>
 </html>
