--- a/Resoconto/Resoconto.html
+++ b/Resoconto/Resoconto.html
@@ -50,7 +50,7 @@
             </header>
 
             <div class="main-container">
-                <div class="month">DICEMBRE</div>
+                <div class="month">NOVEMBRE</div>
                 <div class="stats-header">
                     <div class="stat-box"><span>SOCCORSI</span><strong>372</strong></div>
                     <div class="stat-box"><span>INCENDI</span><strong>170</strong></div>
