--- a/Gerarchia/Personale/_Lunvtic/Lunvtic.html
+++ b/Gerarchia/Personale/_Lunvtic/Lunvtic.html
@@ -58,7 +58,7 @@
                         <div class="ruoloextra">Nucleo Speleo Alpino Fluviale</div>
                     </div>
                     <div class="Skin">
-                        <img src="../../Skin/Lunvtic.png" alt="Skin del Giocatore" class="skin-png-display">
+                        <img src="../../Skin/_Lunvtic.png" alt="Skin del Giocatore" class="skin-png-display">
                     </div>
                 </div>
 
