--- a/Gerarchia/Gerarchia.html
+++ b/Gerarchia/Gerarchia.html
@@ -49,6 +49,8 @@
                 </div>
             </header>
 
+            <div class="menu">☰</div>
+
             <div class="Organigramma-struttura">
 
                 <div class="Livello">
@@ -311,5 +313,6 @@
             <script src="../Script/Temi.js"></script> 
             <script src="../Script/Neve.js"></script>   
             <script src="../Script/CambiaPage.js"></script>
+            <script src="../Script/Menu.js"></script>
         </body>
 </html>
