--- a/Gerarchia/Personale/AEdoo/AEdoo.html
+++ b/Gerarchia/Personale/AEdoo/AEdoo.html
@@ -50,6 +50,8 @@
                 </div>
             </header>
 
+            <div class="menu">☰</div>
+            
             <div class="contenitore-principale">
                 <div class="Personaggio">
                     <div class="Ruolo">Vigile del Fuoco</div> 
@@ -102,6 +104,7 @@
             
             <script src="../../../Script/ApriLibro.js"></script>
             <script src="../../../Script/Temi.js"></script> 
-            <script src="../../../Script/Neve.js"></script>   
+            <script src="../../../Script/Neve.js"></script> 
+            <script src="../../../Script/Menu.js"></script>  
         </body>
 </html>
