--- a/Gerarchia/Personale/Koyukii_/Koyukii_.html
+++ b/Gerarchia/Personale/Koyukii_/Koyukii_.html
@@ -50,6 +50,8 @@
                 </div>
             </header>
 
+            <div class="menu">☰</div>
+            
             <div class="contenitore-principale">
                 <div class="Personaggio">
                     <div class="Ruolo">Ispettore Coordinatore</div> 
@@ -129,6 +131,7 @@
             
             <script src="../../../Script/ApriLibro.js"></script>
             <script src="../../../Script/Temi.js"></script> 
-            <script src="../../../Script/Neve.js"></script>   
+            <script src="../../../Script/Neve.js"></script>  
+            <script src="../../../Script/Menu.js"></script> 
         </body>
 </html>
